--- a/app/package.json
+++ b/app/package.json
@@ -17,11 +17,12 @@
     "@testing-library/user-event": "^12.1.10",
     "notistack": "^1.0.10",
     "react": "^17.0.2",
+    "react-bootstrap": "2.3.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "9.0.1",
     "web-vitals": "^1.0.1"
   },
-  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
