--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "dependencies": {
+    "@babel/helper-module-imports": "^7.16.7",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@project-serum/anchor": "^0.16.0",
-    "express": "^4.17.1"
+    "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.1.3",
+    "express": "^4.17.1",
+    "react-bootstrap": "^2.3.1",
+    "react-toastify": "^9.0.1",
+    "reactjs-toastr": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
