--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@project-serum/anchor": "^0.16.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "create-react-app": "^5.0.1",
     "express": "^4.17.1",
+    "formik": "^2.2.9",
+    "nvm": "^0.0.4",
     "react-bootstrap": "^2.3.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.1",
-    "reactjs-toastr": "^1.1.0"
+    "reactjs-toastr": "^1.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "chai": "^4.3.4",
